[feat] add create room
